<resources>
    <string name="app_name" translatable="false">B-ID</string>
    <string name="passport" translatable="false">Passport</string>
    <string name="add_id_documents" translatable="false">Add ID Documents</string>
    <string name="desc_id_documents" translatable="false">B-ID is a modern yet simple, and most secure way to prove your identity online and in person</string>
    <string name="bahamas_passport" translatable="false">Bahamas Passport</string>
    <string name="title_login" translatable="false">Login</string>
    <string name="title_forget_password" translatable="false">Forget Password</string>
    <string name="title_add_email_address" translatable="false">Add Email Address</string>
    <string name="title_verification_code" translatable="false">Verification Code</string>
    <string name="title_add_login_details" translatable="false">Add Login Details</string>
    <string name="title_my_bid" translatable="false">My B-ID</string>
    <string name="title_wallet" translatable="false">Wallet</string>
    <string name="title_confirmation" translatable="false">Confirmation</string>
    <string name="title_enter_card_details" translatable="false">Enter card details</string>
    <string name="title_add_card" translatable="false">Add card</string>
    <string name="title_card_detail" translatable="false">Card detail</string>
    <string name="title_funds_upload" translatable="false">How would you like to add finds to your wallet</string>
    <string name="title_payment_methods" translatable="false">Payment Methods</string>
    <string name="title_your_cards" translatable="false">Your Cards</string>
    <string name="title_your_balance" translatable="false">Your balance</string>
    <string name="title_checkout" translatable="false">Checkout</string>
    <string name="title_select_but_seat" translatable="false">Select Bus Seat</string>
    <string name="title_discover" translatable="false">Discover</string>
    <string name="title_tell_a_friend" translatable="false">Tell a Friend</string>
    <string name="title_help" translatable="false">Help</string>
    <string name="title_transaction_history" translatable="false">Transaction History</string>
    <string name="title_about" translatable="false">About</string>
    <string name="title_about_bid" translatable="false">About B-ID</string>
    <string name="title_privacy_policy" translatable="false">Privacy Policy</string>
    <string name="title_settings" translatable="false">Settings</string>
    <string name="title_send_us_feedback" translatable="false">Send Feedback</string>
    <string name="title_notification" translatable="false">Notifications</string>
    <string name="title_download_data" translatable="false">Download My Data</string>
    <string name="title_account_settings" translatable="false">Account Settings</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="title_login_settings" translatable="false">Login Setting</string>
    <string name="title_schedule_test" translatable="false">Schedule</string>
    <string name="title_open_source" translatable="false">Open-Source Libraries</string>
    <string name="title_personal_details" translatable="false">Personal Details</string>
    <string name="title_id_documents" translatable="false">Id Documents</string>
    <string name="title_select_your_id_documents" translatable="false">Select Your Id Document</string>
    <string name="title_address" translatable="false">Address</string>
    <string name="title_covid_test_result" translatable="false">COVID Test Result</string>
    <string name="title_scanner" translatable="false">Scanner</string>
    <string name="title_profile_update" translatable="false">Profile Update</string>
    <string name="employment" translatable="false">Employment</string>
    <string name="title_symptoms" translatable="false">Symptoms</string>
    <string name="title_check_up" translatable="false">Check Up</string>
    <string name="title_b_id" translatable="false">My B-ID</string>
    <string name="title_send_details" translatable="false">Send Details</string>
    <string name="title_select_details_send" translatable="false">Select Details To Send</string>
    <string name="title_send_preview" translatable="false">Send Preview</string>
    <string name="title_send_method" translatable="false">Send Method</string>
    <string name="title_face_to_face_share" translatable="false">Face to Face</string>
    <string name="account_updates_desc" translatable="false">Be notified when your video, document or details has been reviewed</string>
    <string name="account_login_settings_desc" translatable="false">We don\'t store a copy of your fingerprint, we simply use your phone\'s fingerprint technology to log you in to the app. But remember, anyone with fingerprint access to this phone will b..</string>
    <string name="account_updates" translatable="false">Account Updates</string>
    <string name="use_fingerprint" translatable="false">User Fingerprint</string>
    <string name="change_pin" translatable="false">Change PIN</string>
    <string name="details_shared_desc" translatable="false">Be notified when you successfully share your details</string>
    <string name="details_shared" translatable="false">Details Shared</string>
    <string name="account_updates_desc1" translatable="false">Be notified when you have an action to be finished.</string>
    <string name="download" translatable="false">Download</string>
    <string name="download_data" translatable="false">Data will be Downloaded in Zip F...</string>
    <string name="download_data_desc" translatable="false">Your personal details belongs to you. You should be able to access your data whenever you like.</string>
    <string name="covid_test_results" translatable="false">My COVID 19 Test Results</string>
    <string name="self_isolate" translatable="false">Self-isolate and Book a Test</string>
    <string name="next_steps" translatable="false">Next Steps</string>
    <string name="book_test" translatable="false">Book a test</string>
    <string name="book_test_desc1" translatable="false">Based on your symptoms,you need to self-isolate and book a test.</string>
    <string name="book_test_desc2" translatable="false">If your symptoms get worse please seek medical attention by booking for a further test through the app</string>
    <string name="follow_doctor_orders" translatable="false">Follow your Doctor\'s orders</string>
    <string name="follow_doctor_orders_desc" translatable="false">Your healthcare provider will tell you what to do next</string>
    <string name="no_test_at_this_time" translatable="false">No test at this time</string>
    <string name="no_test_at_this_time_desc" translatable="false">As of right now, your answers tell us you do not need to be tested for COVID-19 If anything change, or if you get sick, call your healthcare provider.</string>
    <string name="select_country" translatable="false">Select Your Country</string>
    <string name="default_notification_channel_id" translatable="false">BID</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="text_get_started" translatable="false">B-ID is a modern, simple and secure way to provide your identity online and in person.</string>
    <string name="text_mobile_number" translatable="false">B-ID is a modern yet simple, and most \nsecure way to prove your identity \nonline and in person.</string>
    <string name="text_add_email" translatable="false">Enter your email address and we\'ll \nsend you a verification code.</string>
    <string name="text_otp_verify_one" translatable="false">We have sent a code to</string>
    <string name="text_otp_verify_two" translatable="false">It may take a few moments to arrive.</string>
    <string name="text_feedback" translatable="false">Got a suggestion for a new feature? We\'d\n love to hear it.</string>
    <string name="text_tell_a_friend" translatable="false">Share the message to your friend and tell him about B-ID.</string>
    <string name="text_have_an_account" translatable="false">Already have an Account</string>
    <string name="text_sign_up" translatable="false">Sign Up</string>
    <string name="text_create_pin" translatable="false">Enter your Password</string>
    <string name="text_continue" translatable="false">Continue</string>
    <string name="hint_mobile_number" translatable="false">Mobile Number</string>
    <string name="hint_mobile_number_value" translatable="false">+1-242-8089086</string>
    <string name="hint_mobile_verification_code" translatable="false">Mobile Verification Code</string>
    <string name="hint_verify" translatable="false">Verify</string>
    <string name="hint_resend_code" translatable="false">Resend Code</string>
    <string name="hint_negative" translatable="false">(Negative)</string>
    <string name="hint_positive" translatable="false">(Positive)</string>
    <string name="hint_more_view" translatable="false">View more</string>
    <string name="hint_next" translatable="false">Next</string>
    <string name="hint_submit" translatable="false">Submit</string>
    <string name="hint_show_pin" translatable="false">Show Pin</string>
    <string name="hint_re_login" translatable="false">Try to login again</string>
    <string name="hint_time" translatable="false">Time :</string>
    <string name="hint_testing_location" translatable="false">Testing Location : </string>
    <string name="today_checkup_results_desc" translatable="false">Based on your answers, Take up a test and Isolate/Monitor</string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="first_name" translatable="false">First Name</string>
    <string name="last_name" translatable="false">Last Name</string>
    <string name="date_of_birth" translatable="false">Date of Birth</string>
    <string name="mobile_number" translatable="false">Mobile Number</string>
    <string name="email" translatable="false">Email</string>
    <string name="address" translatable="false">Address</string>
    <string name="postal_code" translatable="false">Postal Code</string>
    <string name="city" translatable="false">City</string>
    <string name="state" translatable="false">State</string>
    <string name="country" translatable="false">Country</string>
    <string name="gender" translatable="false">Gender</string>
    <string name="enter_your_name" translatable="false">Enter Your Name</string>
    <string name="enter_your_first_name" translatable="false">Enter Your First Name</string>
    <string name="enter_your_last_name" translatable="false">Enter Your Last Name</string>
    <string name="enter_your_dob" translatable="false">Enter Your Date Of Birth</string>
    <string name="select_your_gender" translatable="false">Select Your Gender</string>
    <string name="enter_your_number" translatable="false">Enter Your Number</string>
    <string name="mock_date" translatable="false">10th July 2021</string>
    <string name="mock_hospital_name" translatable="false">Doctor\'s Hospital</string>
    <string name="mock_test_name" translatable="false">COVID 19 Rapid Test</string>
    <string name="mock_amount" translatable="false">$15.00</string>
    <string name="male" translatable="false">Male</string>
    <string name="female" translatable="false">Female</string>
    <string name="rather_not_to_say" translatable="false">Rather not to say</string>
    <string name="back" translatable="false">Back</string>
    <string name="next_question" translatable="false">Next Question</string>
    <string name="contact_of_known_case" translatable="false">CONTACT OF KNOWN CASE</string>
    <string name="instagram_or_twitter_names" translatable="false">Instagram or Twitter Names</string>
</resources>