<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_5sdp"
    app:cardBackgroundColor="@color/colorWhite"
    app:cardElevation="@dimen/_5sdp"
    app:contentPadding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/male_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/male"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_11sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:alpha="0.1"
            android:background="@color/colorBlack" />

        <TextView
            android:id="@+id/female_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/female"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_11sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:alpha="0.1"
            android:background="@color/colorBlack" />


        <TextView
            android:id="@+id/rather_not_say_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/rather_not_to_say"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_11sdp" />


    </LinearLayout>
</androidx.cardview.widget.CardView>