<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_8sdp"
    android:layout_marginRight="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/pad_mar_0"
    app:cardElevation="@dimen/_10sdp">
    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <LinearLayout
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp">

            <ImageView
                android:id="@+id/card_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/mastercard_group" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="@dimen/_150sdp"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_hospital_transaction_history_adapter_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/mock_hospital_name"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_amount_transaction_history_adapter_list"
                app:layout_constraintTop_toBottomOf="@id/tv_date_transaction_history_adapter_list" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_test_transaction_history_adapter_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mock_test_name"
                android:textColor="@color/colorTextGray"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/tv_amount_transaction_history_adapter_list"
                app:layout_constraintTop_toBottomOf="@id/tv_hospital_transaction_history_adapter_list" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_date_transaction_history_adapter_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/mock_date"
                android:textColor="@color/colorTextHint"
                android:textSize="@dimen/_10sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_amount_transaction_history_adapter_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/mock_amount"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>