<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="@dimen/pad_mar_0"
        android:layout_height="@dimen/pad_mar_0"
        android:fillViewport="true"
        android:paddingBottom="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@+id/btn_book_test"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView

                android:padding="@dimen/_30sdp"
                android:id="@+id/iv_logo_bid"
                android:layout_width="@dimen/pad_mar_0"
                android:layout_height="@dimen/pad_mar_0"
                android:layout_marginTop="@dimen/_10sdp"
                android:src="@drawable/test_needed_pic"
                app:layout_constraintDimensionRatio="2:1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_book_test"
                android:layout_width="@dimen/pad_mar_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/self_isolate"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo_bid"
                app:layout_constraintWidth_percent="0.9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_book_test_desc1"
                android:layout_width="@dimen/pad_mar_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/book_test_desc1"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_book_test"
                app:layout_constraintWidth_percent="0.9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_book_test_desc2"
                android:layout_width="@dimen/pad_mar_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/book_test_desc2"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_11sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_book_test_desc1"
                app:layout_constraintWidth_percent="0.9" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_next_steps"
                android:layout_width="@dimen/pad_mar_0"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semi_bold"
                android:text="@string/next_steps"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_book_test_desc2"
                app:layout_constraintWidth_percent="0.9" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="@dimen/pad_mar_0"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_next_steps"
                app:layout_constraintVertical_bias="1.0"
                app:layout_constraintWidth_percent="0.9"
                tools:listitem="@layout/adapter_test_next_steps" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_book_test"
        android:layout_width="@dimen/pad_mar_0"
        android:layout_height="@dimen/_25sdp"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/shape_sign_in_corner_radius"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/book_test"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>